--- a/style.css
+++ b/style.css
@@ -14,10 +14,114 @@
     --color-eight: #C9E7F2;
     --color-nine: #285059;
     --color-ten: #BFA98E;
+    /* default color */
+    --color-default: #fffffa;
 }
 
 * {
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
+}
+
+body, html {
+    background-color: var(--color-default);
+}
+
+header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;   
+    padding: 1.5rem 4.0rem;
+    text-transform: uppercase;
+    color: var(--color-three);
+}
+
+.half-logo {
+    color: var(--color-nine);
+}
+
+nav ul {
+    display: flex;
+    list-style-type: none;
+}
+
+nav ul li {
+    margin-left: 1rem;
+}
+
+ul li a {
+    text-decoration: none;
+    color: var(--color-three);
+    font-weight: bold;
+}
+
+section.first-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5rem;
+    padding: 5.0rem 4.0rem 1.5rem 4.0rem;
+}
+
+section.first-section .svg-one {
+    width: 40vw;
+}
+
+section.first-section .main-info h2 {
+    font-size: 2.5rem;
+    color: var(--color-nine);
+    margin-bottom: 1.5rem;
+}
+
+section.first-section .main-info p {
+    font-size: 1.2rem;
+    color: var(--color-three);
+    margin-bottom: 1rem;
+    line-height: 2rem;
+}
+
+section.first-img {
+    background-image: url(images/image-one.jpg);
+    height: 600px;
+    margin: 5rem 0;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+section.second-section {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 5rem;
+    padding: 1.5rem 4.0rem 1.5rem 4.0rem;
+}
+
+section.second-section .svg-two {
+    width: 40vw;
+}
+
+section.second-section .second-info h2 {
+    font-size: 2.5rem;
+    color: var(--color-three);
+    margin-bottom: 1.5rem;
+}
+
+section.second-section .second-info p {
+    font-size: 1.2rem;
+    color: var(--color-nine);
+    margin-bottom: 1rem;
+    line-height: 2rem;
+}
+
+section.second-img {
+    background-image: url(images/image-two.jpg);
+    height: 600px;
+    margin: 5rem 0;
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
