--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@ section.second-img {
     background-size: cover;
     text-transform: uppercase;
     font-size: 2rem;
+    text-align: center;
     color: var(--color-two);
     text-shadow: 1px 1px rgba(0, 0, 0, 0.645);
 }
@@ -162,4 +163,40 @@ footer {
     border-top: 1px solid black;
     padding: 1rem;
     text-align: center;
+}
+
+@media screen and (max-width: 768px) {
+    header {
+        display: block;
+        text-align: center;
+    }
+
+    nav ul {
+        margin-top: 2rem;
+        display: block;
+        line-height: 2rem;
+    }
+
+    section.first-section,
+    section.second-section {
+        display: block;
+    }
+
+    section.first-section .svg-one,
+    section.second-section .svg-two {
+    width: 80vw;
+    }
+
+    section.first-section .svg-one {
+        margin-bottom: 3rem;
+    }
+
+    section.second-section .svg-two {
+        margin-top: 3rem;
+    }
+
+    section.first-img,
+    section.second-img {
+        font-size: 1.3rem;
+    }
 }
